Fix metadata alignment in infoboxes.

--- a/docs/style.css
+++ b/docs/style.css
@@ -172,7 +172,7 @@ table.data tbody tr:last-of-type {
 .metadata {
     position: absolute;
     bottom: 1rem;
-    left: 1rem;
+    left: 0;
     height: 3rem;
     margin-top: 1rem;
     color: #888;
